Created DynamoDB server that can store JSON objects.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Page metadata. -->
-    <title>Generic Dashboard</title>
+    <title>JSON Storage</title>
     <meta name="description" content="A dashboard service.">
-    <meta name="author" content="Tim Clancy">
+    <meta name="author" content="Liam Clancy">
 
     <!-- Stylesheets for the page. -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
