Refactored project to support linting as Husky check.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -41,8 +41,8 @@
     </div>
 
     <!-- Client-side scripts for this page. -->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/imported-js/jquery.min.js"></script>
+    <script src="/imported-js/bootstrap.min.js"></script>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
